<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.projectbem.Home.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.projectbem.Home.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_votes"
        android:name="com.example.projectbem.Home.ui.Vote.VoteFragment"
        android:label="fragment_vote"
        tools:layout="@layout/fragment_vote" />

    <fragment
        android:id="@+id/navigation_jadwal"
        android:name="com.example.projectbem.Home.ui.Jadwal.JadwalFragment"
        android:label="fragment_jadwal"
        tools:layout="@layout/fragment_jadwal" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.projectbem.Home.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />


</navigation>