<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.ui.EventsDetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:title="Detail Event"
            android:titleTextColor="@android:color/white"
            app:navigationIcon="@drawable/baseline_arrow_back_24" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_foto"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/tv_judul"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/judul"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_foto" />

                    <TextView
                        android:id="@+id/tv_summary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/summary"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_judul" />

                    <TextView
                        android:id="@+id/tv_owner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/owner"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/tv_summary"
                        app:layout_constraintTop_toBottomOf="@+id/tv_summary" />

                    <TextView
                        android:id="@+id/tv_kategori"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="@+id/tv_owner"
                        app:layout_constraintTop_toBottomOf="@+id/tv_owner" />

                    <TextView
                        android:id="@+id/tv_kota"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/kota"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="@+id/tv_kategori"
                        app:layout_constraintTop_toBottomOf="@+id/tv_kategori" />

                    <TextView
                        android:id="@+id/tv_tanggal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/tanggal"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="@+id/tv_kota"
                        app:layout_constraintTop_toBottomOf="@+id/tv_kota" />

                    <TextView
                        android:id="@+id/tv_waktu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/waktu"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="@+id/tv_tanggal"
                        app:layout_constraintTop_toBottomOf="@+id/tv_tanggal" />

                    <TextView
                        android:id="@+id/tv_quota"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/kouta"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="@+id/tv_waktu"
                        app:layout_constraintTop_toBottomOf="@+id/tv_waktu" />

                    <TextView
                        android:id="@+id/tv_deskripsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/deskripsi"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_quota" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_deskripsi"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/iv_foto" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>